<?xml version="1.0"?>
<package format="2">
  <name>test_pkg</name>
  <version>0.0.0</version>
  <description>Package to figure out wtf is up with deserialize</description>
  <maintainer email="gwen@maidbot.com">gwen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend> roscpp </depend>
  <depend> std_msgs </depend>
  <build_depend> message_generation </build_depend>
  <exec_depend> message_runtime </exec_depend>
  <export>
  </export>
</package>
